After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766251 - gstdebugutils: fix warning on enum properties printing
gstdebugutils: fix warning on enum properties printing
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal minor
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-11 03:22 UTC by Wonchul Lee
Modified: 2016-05-11 07:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstdebugutils: fix warning on enum properties printing (935 bytes, patch)
2016-05-11 03:23 UTC, Wonchul Lee
committed Details | Review

Description Wonchul Lee 2016-05-11 03:22:14 UTC
(gst-launch-1.0:11520): GLib-GObject-WARNING **: /tmp/buildd/glib2.0-2.42.1/./gobject/gvalue.c:181: cannot initialize GValue with type 'gboolean', the value has already been initialized as 'GstA52DecMode'

(gst-launch-1.0:11520): GLib-GObject-CRITICAL **: g_param_value_defaults: assertion 'PSPEC_APPLIES_TO_VALUE (pspec, value)' failed
Pipeline is PREROLLED ...
Setting pipeline to PLAYING ...

(gst-launch-1.0:11520): GLib-GObject-WARNING **: /tmp/buildd/glib2.0-2.42.1/./gobject/gvalue.c:181: cannot initialize GValue with type 'gboolean', the value has already been initialized as 'GstA52DecMode'

(gst-launch-1.0:11520): GLib-GObject-CRITICAL **: g_param_value_defaults: assertion 'PSPEC_APPLIES_TO_VALUE (pspec, value)' failed


I got some warnings with GST_DEBUG_DUMP_DOT_DIR, it came with 9e836805632a1da98622c13f64ba130e01e64eda commit.
I fixed it to unset value for next properties when nickname of enum does not exist.
Comment 1 Wonchul Lee 2016-05-11 03:23:04 UTC
Created attachment 327626 [details] [review]
gstdebugutils: fix warning on enum properties printing
Comment 2 Sebastian Dröge (slomo) 2016-05-11 07:03:08 UTC
commit 58f964da96b737883c281e96b356826e614e2da9
Author: Wonchul Lee <wonchul.lee@collabora.com>
Date:   Wed May 11 12:16:09 2016 +0900

    debugutils: fix warning on enum properties printing
    
    https://bugzilla.gnome.org/show_bug.cgi?id=766251