debugutils: fix warning on enum properties printing

https://bugzilla.gnome.org/show_bug.cgi?id=766251